--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,24 @@
 # konfigurasi server
 server {
     listen 80;
-    server_name regiapriandi.me;
+    listen [::]:80;
+    server_name localhost;
+
+    location = /favicon.ico { access_log off; log_not_found off; }
 
     # konfigurasi root dan static files
-    root /app/static/;
     location /static/ {
         alias /app/static/;
     }
 
     # konfigurasi root dan media files
-    root /app/media/;
     location /media/ {
         alias /app/media/;
     }
 
     # konfigurasi proxy_pass ke gunicorn
     location / {
-        proxy_pass http://localhost:8000;
+        proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
