--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,26 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
 
   web:
     build: .
-    command: gunicorn webforto.wsgi:application --bind 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py collectstatic --noinput &&
+             python manage.py makemigrations webfortoapp &&
+             python manage.py migrate &&
+             gunicorn webforto.wsgi:application --bind 0.0.0.0:8000"
     expose:
       - 8000
     volumes:
-      - .:/app
+      - static_volume:/app/static
+      - media_volume:/app/media
+    environment:
+      - POSTGRES_NAME=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     depends_on:
       - db
 
@@ -26,5 +35,11 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/app/static
+      - media_volume:/app/media
     depends_on:
       - web
+
+volumes:
+  static_volume:
+  media_volume:
