--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name localhost;
+    server_name regiapriandi.me;
 
     location = /favicon.ico { access_log off; log_not_found off; }
 
