--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,8 @@ server {
     listen [::]:80;
     server_name regiapriandi.me;
 
+    client_max_body_size 64M;
+
     location = /favicon.ico { access_log off; log_not_found off; }
 
     # konfigurasi root dan static files
